# Promptwar-2

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  eslint.config.js  firebase.json  firestore.rules  index.html  nginx.conf  package-lock.json  package.json  vitest.config.js
.github/workflows/: ci.yml  deploy.yml
.husky/: pre-commit
backend/: .flake8  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/tests/: conftest.py  test_health_security.py  test_map_endpoint.py  test_map_rendering.py  test_schemas.py
css/: components.css  styles.css
functions/: index.js  package.json
js/: analytics.js  api.js  app.js  chat.js  components.js  confetti.js  constants.js  dashboard.js  data.js  faq.js  firebase.js  quiz.js  router.js  state.js  timeline.js  wizard.js
public/: manifest.json  sw.js
tests/: analytics.test.js  api.test.js  chat.test.js  confetti.test.js  firebase.test.js  quiz.test.js  router.test.js  state.test.js
